--- a/map_beta.html
+++ b/map_beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>京王線 リアルタイム配線図 Ver.1.6</title>
+    <title>京王線 リアルタイム配線図 Ver.1.61</title>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, 'Hiragino Sans', sans-serif; overflow: hidden; }
@@ -28,25 +28,25 @@
             z-index: 100;
             transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
             transform: translate(-50%, -50%);
-            /* 三角形に白枠を見せるためのシャドウ */
+            /* 三角形に白い輪郭線を持たせる */
             filter: drop-shadow(0 0 0.8px #fff);
         }
 
-        /* 向きの定義（1: 上り/左向き、2: 下り/右向き） */
+        /* 向きの定義（1: 上り/新宿方面＝左向き、2: 下り/郊外方面＝右向き） */
         .dir-1 { clip-path: polygon(100% 0, 0 50%, 100% 100%); }
         .dir-2 { clip-path: polygon(0 0, 100% 50%, 0 100%); }
 
         .train-label {
             position: absolute;
             left: 50%;
-            top: -36px; 
+            top: -38px; /* 三角形の頂点に被らないよう調整 */
             transform: translateX(-50%);
-            background: rgba(0,0,0,0.7);
+            background: rgba(0,0,0,0.65);
             color: #fff;
             padding: 2px 5px;
             border-radius: 2px;
-            font-size: 9px;
-            font-weight: 300;
+            font-size: 10px; /* 指定のサイズに復元 */
+            font-weight: 400; /* 指定の太さに復元 */
             line-height: 1.1;
             white-space: nowrap;
             display: flex;
@@ -57,9 +57,10 @@
         }
 
         .label-row { display: flex; gap: 4px; }
-        .delay-text { color: #ff4444; font-weight: 700; }
+        .delay-text { color: #ff4444; font-weight: 550; } /* 指定の太さに復元 */
         .car-model { color: #00ffcc; font-size: 7.5px; }
 
+        /* 種別カラー */
         .sy-1 { background-color: #ff4c7c; }
         .sy-2 { background-color: #00b66a; }
         .sy-3 { background-color: #0082ff; }
@@ -72,7 +73,7 @@
 
 <header>
     <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
-    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 (新宿-明大前)</h1>
+    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 v1.61</h1>
     <div id="status" style="margin-left:auto; font-size:10px; color:#aaa;">接続中...</div>
 </header>
 
@@ -87,6 +88,7 @@
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 const UNYO_TXT_URL = "unyo/h/8R.txt";
 
+// E008_10: {x: 630, y: 294} を死守
 const posCoords = {
     "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
@@ -136,7 +138,6 @@ async function fetchUnyoData() {
         const lines = text.split(/\r?\n/);
         let currentTrains = [];
         const newMap = {};
-
         lines.forEach(line => {
             const l = line.trim();
             if (!l) return;
@@ -197,7 +198,7 @@ async function update() {
                         layer.appendChild(el);
                     }
                     
-                    // 向き(ki)と種別(sy)のクラスを付与
+                    // 向き(ki: 1=左, 2=右)と種別(sy)を反映
                     el.className = `train sy-${p.sy || '6'} dir-${p.ki || '2'}`;
                     el.style.left = `${base.x + offset}px`;
                     el.style.top = `${base.y}px`;
@@ -233,7 +234,7 @@ async function update() {
         document.querySelectorAll('.train').forEach(el => {
             if (!activeIds.has(el.id.replace('tr-', ''))) el.remove();
         });
-        document.getElementById('status').textContent = "更新: " + new Date().toLocaleTimeString();
+        document.getElementById('status').textContent = "最終更新: " + new Date().toLocaleTimeString();
     } catch (e) { console.error(e); }
 }
 
