--- a/map_beta.html
+++ b/map_beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>京王線 リアルタイム配線図 Ver.1.62</title>
+    <title>京王線 リアルタイム配線図 Ver.1.8</title>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, 'Hiragino Sans', sans-serif; overflow: hidden; }
@@ -22,30 +22,30 @@
         .map-content { position: relative; width: 1200px; height: 675px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
 
-        /* 列車コンテナ（ここには clip-path をかけない） */
+        /* 列車コンテナ */
         .train {
-            position: absolute; width: 22px; height: 20px;
+            position: absolute; width: 14px; height: 14px;
             z-index: 100;
             transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
             transform: translate(-50%, -50%);
             display: flex; align-items: center; justify-content: center;
         }
 
-        /* 三角形本体（正三角形に近い比率） */
+        /* 三角形本体（縦12px : 横10px） */
         .train-shape {
-            width: 20px; height: 18px;
-            filter: drop-shadow(0 0 1px #fff);
+            width: 10px; height: 12px;
+            filter: drop-shadow(0 0 0.6px #fff);
             transition: background-color 0.3s;
         }
 
-        /* 向きの定義（1: 左向き/上り, 2: 右向き/下り） */
-        .dir-1 .train-shape { clip-path: polygon(100% 0, 0 50%, 100% 100%); }
-        .dir-2 .train-shape { clip-path: polygon(0 0, 100% 50%, 0 100%); }
+        /* 向きの定義 (ki: 0=上り/左向き, 1=下り/右向き) */
+        .dir-0 .train-shape { clip-path: polygon(100% 0, 0 50%, 100% 100%); }
+        .dir-1 .train-shape { clip-path: polygon(0 0, 100% 50%, 0 100%); }
 
         .train-label {
             position: absolute;
             left: 50%;
-            bottom: 22px; /* 三角形の上に配置 */
+            bottom: 18px;
             transform: translateX(-50%);
             background: rgba(0,0,0,0.65);
             color: #fff;
@@ -66,20 +66,20 @@
         .delay-text { color: #ff4444; font-weight: 550; }
         .car-model { color: #00ffcc; font-size: 7.5px; }
 
-        /* 種別カラー（train-shapeに適用） */
-        .sy-1 { background-color: #ff4c7c; }
-        .sy-2 { background-color: #00b66a; }
-        .sy-3 { background-color: #0082ff; }
-        .sy-5 { background-color: #d8d100; color: #000; }
-        .sy-6 { background-color: #888; }
-        .sy-9, .sy-11 { background-color: #c71585; }
+        /* 種別カラー */
+        .train-shape.sy-1 { background-color: #ff4c7c; }
+        .train-shape.sy-2 { background-color: #00b66a; }
+        .train-shape.sy-3 { background-color: #0082ff; }
+        .train-shape.sy-5 { background-color: #d8d100; color: #000; }
+        .train-shape.sy-6 { background-color: #888; }
+        .train-shape.sy-9, .train-shape.sy-11 { background-color: #c71585; }
     </style>
 </head>
 <body>
 
 <header>
     <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
-    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 v1.62</h1>
+    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 v1.8</h1>
     <div id="status" style="margin-left:auto; font-size:10px; color:#aaa;">接続中...</div>
 </header>
 
@@ -168,7 +168,7 @@ function getDestName(ik) {
         "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調",
         "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動",
         "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩",
-        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"--", "301":"--"
+        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"当止"
     };
     return destMap[String(ik)] || ik;
 }
@@ -192,7 +192,7 @@ async function update() {
                 if (base) {
                     activeIds.add(p.tr);
                     const cKey = `${base.x}_${base.y}`;
-                    const offset = (posCounter[cKey] || 0) * 14;
+                    const offset = (posCounter[cKey] || 0) * 12;
                     posCounter[cKey] = (posCounter[cKey] || 0) + 1;
 
                     let el = document.getElementById(`tr-${p.tr}`);
@@ -203,8 +203,11 @@ async function update() {
                         layer.appendChild(el);
                     }
                     
-                    // 向き(ki)と種別(sy)をクラスで管理
-                    el.className = `train dir-${p.ki || '2'}`;
+                    // 方向正規化: 0は上り、1は下り（それ以外は一旦1とする）
+                    let direction = String(p.ki);
+                    if (direction !== '0' && direction !== '1') direction = '1';
+
+                    el.className = `train dir-${direction}`;
                     el.style.left = `${base.x + offset}px`;
                     el.style.top = `${base.y}px`;
 
@@ -216,7 +219,6 @@ async function update() {
                     const sr = p.sr || "";
                     const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
 
-                    // 三角形本体(train-shape)とラベル(train-label)を分けて挿入
                     el.innerHTML = `
                         <div class="train-shape sy-${p.sy || '6'}"></div>
                         <div class="train-label">
