--- a/map_beta.html
+++ b/map_beta.html
@@ -85,7 +85,7 @@
 
 <div class="map-wrapper">
     <div class="map-content" id="mapContent">
-        <img src="image.png" class="map-img">
+        <img src="image_black.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
 </div>
