--- a/map_beta.html
+++ b/map_beta.html
@@ -63,23 +63,23 @@
         }
 
         .label-row { display: flex; gap: 4px; }
-        .delay-text { color: #ff4444; font-weight: 550; }
-        .car-model { color: #00ffcc; font-size: 7.5px; }
+        .delay-text { color: #ff4444; font-weight: 470; }
+        .car-model { color: #00ffcc; font-size: 6.5px; }
 
         /* 種別カラー */
-        .train-shape.sy-1 { background-color: #ff4c7c; }
-        .train-shape.sy-2 { background-color: #00b66a; }
+        .train-shape.sy-1 { background-color: #ff1e63; }
+        .train-shape.sy-2 { background-color: #1cb648; }
         .train-shape.sy-3 { background-color: #0082ff; }
-        .train-shape.sy-5 { background-color: #d8d100; color: #000; }
+        .train-shape.sy-5 { background-color: #d6e500; color: #000; }
         .train-shape.sy-6 { background-color: #888; }
-        .train-shape.sy-9, .train-shape.sy-11 { background-color: #c71585; }
+        .train-shape.sy-9, .train-shape.sy-11 { background-color: #58002e; }
     </style>
 </head>
 <body>
 
 <header>
     <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
-    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 v1.8</h1>
+    <h1 style="font-size:13px; margin:0; font-weight:300;">v1.8</h1>
     <div id="status" style="margin-left:auto; font-size:10px; color:#aaa;">接続中...</div>
 </header>
 
