--- a/map_beta.html
+++ b/map_beta.html
@@ -72,7 +72,7 @@
         .train-shape.sy-3 { background-color: #0082ff; }
         .train-shape.sy-5 { background-color: #d6e500; color: #000; }
         .train-shape.sy-6 { background-color: #888; }
-        .train-shape.sy-9, .train-shape.sy-11 { background-color: #58002e; }
+        .train-shape.sy-9, .train-shape.sy-11 { background-color: #e10000; }
     </style>
 </head>
 <body>
@@ -131,7 +131,8 @@ const posCoords = {
     "D015":   {x: 560, y: 537}, "U014":   {x: 560, y: 566},
     "E015_1": {x: 630, y: 537}, "E015_2": {x: 630, y: 566},
     "D016":   {x: 690, y: 537}, "U015":   {x: 690, y: 566},
-    "E016_1": {x: 789, y: 483}, "E016_1S":{x: 789, y: 483}, "E016_2": {x: 789, y: 511}, "E016_2S":{x: 789, y: 511}, "E016_3": {x: 789, y: 537}, "E016_4": {x: 789, y: 566}
+    "E016_1": {x: 789, y: 483}, "E016_1S":{x: 789, y: 483}, "E016_2": {x: 789, y: 511}, "E016_2S":{x: 789, y: 511}, "E016_3": {x: 789, y: 537}, "E016_4": {x: 789, y: 566},
+    "D044":   {x: 856, y: 483}, "S016":   {x: 883, y: 489}, "D017":   {x: 960, y: 537}, "U016":   {x: 960, y: 566}
 };
 
 let unyoMap = {};
