--- a/map_beta.html
+++ b/map_beta.html
@@ -78,12 +78,12 @@
         .car-model { color: #00ffcc; font-size: 6.5px; }
 
         /* 種別カラー */
-        .train-shape.sy-1 { background-color: #ff1e63; }
+        .train-shape.sy-1 { background-color: #f4233c; }
         .train-shape.sy-2 { background-color: #1cb648; }
         .train-shape.sy-3 { background-color: #0082ff; }
         .train-shape.sy-5 { background-color: #d6e500; color: #000; }
         .train-shape.sy-6 { background-color: #888; }
-        .train-shape.sy-9, .train-shape.sy-11 { background-color: #e10000; }
+        .train-shape.sy-9, .train-shape.sy-11 { background-color: #f00095; }
     </style>
 </head>
 <body>
