--- a/map_beta.html
+++ b/map_beta.html
@@ -96,7 +96,7 @@
 
 <div class="map-wrapper">
     <div class="map-content" id="mapContent">
-        <img src="map_black_chofu.png" class="map-img">
+        <img src="black_img.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
 </div>
@@ -106,10 +106,10 @@ const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 const UNYO_TXT_URL = "unyo/h/8R.txt";
 
 const posCoords = {
-    "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
+    "E001_1": {x: 203, y: 135}, "E001_2": {x: 203, y: 163}, "E001_3": {x: 203, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
     "E002_1": {x: 680, y: 65},  "E002_2": {x: 680, y: 91},  "E002_3S": {x: 680, y: 120}, "E002_4": {x: 680, y: 146},
-    "E033_4": {x: 149, y: 91},  "E033_5": {x: 149, y: 119},
+    "E033_4": {x: 106, y: 91},  "E033_5": {x: 106, y: 119},
     "D034":   {x: 295, y: 91},  "U033":   {x: 295, y: 120},
     "E034_1": {x: 367, y: 91},  "E034_2": {x: 367, y: 120},
     "D035":   {x: 430, y: 91},  "U034":   {x: 430, y: 120},
