--- a/map_sagamihara.html
+++ b/map_sagamihara.html
@@ -96,7 +96,7 @@
 
 <div class="map-wrapper">
     <div class="map-content" id="mapContent">
-        <img src="sagamihara_new.png" class="map-img">
+        <img src="sagamihara_fixed.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
 </div>
